
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint32 ;
struct passwd {int dummy; } ;
typedef int server ;
typedef int password ;
typedef void* BOOL ;


 void* False ;
 int RDP_LOGON_NORMAL ;
 void* encryption ;
 int fprintf (int ,char*,...) ;
 int keymapname ;
 int memset (char*,int ,int) ;
 int rdp_connect (char*,int ,char*,char*,char*,char*) ;
 int rdp_main_loop () ;
 void* sendmotion ;
 int stderr ;
 int strcpy (int ,char*) ;
 int strncpy (char*,char*,int) ;

int main(int argc, char *argv[])
{
 char server[64];
 char fullhostname[64];
 char domain[16];
 char password[16];
 char shell[128];
 char directory[32];
 BOOL prompt_password;
 struct passwd *pw;
 uint32 flags;
 char *p;
 int c;
 int username_option = 0;
 encryption = False;
 sendmotion = False;
 flags = RDP_LOGON_NORMAL;
 prompt_password = False;
 domain[0] = password[0] = shell[0] = directory[0] = 0;
 strcpy(keymapname, "en-us");

 if (argc == 1)
 {
  fprintf(stderr, "\n[=] Usage: %s <ip address>\n\n", argv[0]);
  return 0;
 }

 strncpy(server, argv[1], sizeof(server));
 if(!rdp_connect(server, flags, domain, password, shell, directory))
  return 0;

 fprintf(stderr, "\n[=] Connected to %s\n", argv[1]);
 fprintf(stderr, "[=] Hit CTRL-C if the progress bar stops.\n\n");

 memset(password, 0, sizeof(password));
 rdp_main_loop();
 fprintf(stderr, "\n[=] Done. Check port 3389 on the remote host.\n\n");
 return 0;
}
